fixed news paragraph alignment

--- a/panel/src/styles.scss
+++ b/panel/src/styles.scss
@@ -67,6 +67,14 @@
   max-height: 35vh;
 }
 
+.mh-40 {
+  max-height: 40vh;
+}
+
+.mh-50 {
+  max-height: 50vh;
+}
+
 .cursor-pointer {
   cursor: default;
 }
@@ -81,4 +89,8 @@
 
 .w-40 {
   width: 40% !important;
+}
+
+.w-60 {
+  width: 60% !important;
 }
